sprint4/tests/error/23_div0.py
# Division by 0. This only works with [OPT_ON]
#
print(1 / 0)
